--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
     <groupId>groupId</groupId>
     <artifactId>dddd</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    
+    <build>
+        <finalName>dddd</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
