--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <fork>true</fork>
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 </project>
